feat: notify and log out replaced playback sessions
